--- a/html/genre.html
+++ b/html/genre.html
@@ -121,10 +121,10 @@
                         localStorage.setItem('type', type)
                     }
                 }, home() {
-                    window.location.href = "html/index.html"
+                    window.location.href = "html/homePage.html"
                 },
                 home() {
-                    window.location.href = "/html/index.html"
+                    window.location.href = "/html/homePage.html"
                 }
             },
             mounted() {
