--- a/html/keyword.html
+++ b/html/keyword.html
@@ -122,7 +122,7 @@
                         localStorage.setItem('type', type)
                     }
                 }, home() {
-                    window.location.href = "/html/index.html"
+                    window.location.href = "/html/homePage.html"
                 }
             },
             mounted() {
