--- a/html/person.html
+++ b/html/person.html
@@ -191,7 +191,7 @@
                     window.location.href = '/html/movie.html';
                 },
                 home(){
-                    window.location.href="/html/index.html"
+                    window.location.href="/html/homePage.html"
                 }
 
             },
