--- a/html/seasons.html
+++ b/html/seasons.html
@@ -94,7 +94,7 @@
                     this.user_avatar = this.user.avatar.tmdb.avatar_path
 
                 }, home() {
-                    window.location.href = "/html/index.html"
+                    window.location.href = "/html/homePage.html"
                 },
                 episodes(season, tv) {
                     localStorage.setItem('tv', JSON.stringify(tv));
