--- a/html/keyword.html
+++ b/html/keyword.html
@@ -113,16 +113,16 @@
                 },
                 detail(obj, type) {
                     if (this.type == 'movie') {
-                        window.location.href = '/html/movie.html';
+                        window.location.href = './html/movie.html';
                         localStorage.setItem('movie', JSON.stringify(obj));
                         localStorage.setItem('type', type)
                     } else if (type == 'series') {
-                        window.location.href = '/html/movie.html';
+                        window.location.href = './html/movie.html';
                         localStorage.setItem('series', JSON.stringify(obj));
                         localStorage.setItem('type', type)
                     }
                 }, home() {
-                    window.location.href = "/html/homePage.html"
+                    window.location.href = "./html/homePage.html"
                 }
             },
             mounted() {
