--- a/html/person.html
+++ b/html/person.html
@@ -188,10 +188,10 @@
                         localStorage.setItem('series', JSON.stringify(show));
                         localStorage.setItem('type','series')
                     }
-                    window.location.href = '/html/movie.html';
+                    window.location.href = './html/movie.html';
                 },
                 home(){
-                    window.location.href="/html/homePage.html"
+                    window.location.href="./html/homePage.html"
                 }
 
             },
