Commit Prueba Movies

--- a/html/capitulos.html
+++ b/html/capitulos.html
@@ -126,7 +126,7 @@
                         });
 
                 },home(){
-					window.location.href="./html/homePage.html"
+					window.location.href="homePage.html"
 				}
             },
 
