--- a/html/seasons.html
+++ b/html/seasons.html
@@ -94,12 +94,12 @@
                     this.user_avatar = this.user.avatar.tmdb.avatar_path
 
                 }, home() {
-                    window.location.href = "./html/homePage.html"
+                    window.location.href = "homePage.html"
                 },
                 episodes(season, tv) {
                     localStorage.setItem('tv', JSON.stringify(tv));
                     localStorage.setItem('season', JSON.stringify(season));
-                    window.location.href = "./html/capitulos.html"
+                    window.location.href = "capitulos.html"
                 }
             },
 
