--- a/html/homePage.html
+++ b/html/homePage.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/dist/output.css">
+	<link rel="stylesheet" href="/output.css">
 	<title>Cuevana77</title>
 </head>
 
@@ -30,10 +30,10 @@
 
 		<div class="content flex flex-wrap">
 			<div class="cat">
-				<p class="text-2xl text-center p-2.5 h-[50px] bg-gray-400">Categorias</p>
+				<p class="text-2xl text-center p-2.5 h-[50px] bg-gray-400">Genres</p>
 				<ul class="seleccionar-cat flex text-center text-white">
 					<li class=" bg-slate-600 w-1/2 hover:bg-gray-300 hover:text-black hover:ease-in duration-300">
-						<button @click="setFlagTrue" class="w-full btn-square">Peliculas</button>
+						<button @click="setFlagTrue" class="w-full btn-square">Movies</button>
 					</li>
 					<li class=" bg-slate-600 w-1/2 hover:bg-gray-300 hover:text-black hover:ease-in duration-300">
 						<button @click="setFlagFalse" class="w-full btn-square">Series</button>
@@ -55,14 +55,14 @@
 				<!-- Content Peliculas -->
 				<ul class="flex">
 					<li class="w-1/4">
-						<h1 class="text-5xl font-bold mt-20 ml-5">Peliculas</h1>
+						<h1 class="text-5xl font-bold mt-20 ml-5">Movies</h1>
 					</li>
 					<li class="ml-[10rem] mt-20">
 						<div class="btn-group btn-group-vertical lg:btn-group-horizontal">
 							<button @click="setPopularMov"
-								class="btn hover:bg-violet-600 focus:bg-violet-700">Populares</button>
+								class="btn hover:bg-violet-600 focus:bg-violet-700">Popular</button>
 							<button @click="setTrendingMov"
-								class="btn hover:bg-violet-600 focus:bg-violet-700">Trendings</button>
+								class="btn hover:bg-violet-600 focus:bg-violet-700">Trending</button>
 						</div>
 					</li>
 				</ul>
@@ -75,7 +75,7 @@
 							<div class="card-body">
 								<h3 class="card-title">{{desc.title}}</h3>
 								<div class="card-actions justify-center m-5">
-									<button @click="detail(desc,'movie')" class="btn btn-primary">Detalles</button>
+									<button @click="detail(desc,'movie')" class="btn btn-primary">View</button>
 								</div>
 							</div>
 						</div>
@@ -90,7 +90,7 @@
 							<div class="card-body">
 								<h3 class="card-title">{{desc.title}}</h3>
 								<div class="card-actions justify-center m-5">
-									<button @click="detail(desc,'movie')" class="btn btn-primary">Detalles</button>
+									<button @click="detail(desc,'movie')" class="btn btn-primary">View</button>
 								</div>
 							</div>
 						</div>
@@ -105,9 +105,9 @@
 					<li class="ml-[10rem] mt-20">
 						<div class="btn-group btn-group-vertical lg:btn-group-horizontal">
 							<button @click="setPopularSrs"
-								class="btn hover:bg-violet-600 focus:bg-violet-700">Populares</button>
+								class="btn hover:bg-violet-600 focus:bg-violet-700">Popular</button>
 							<button @click="setTrendingSrs"
-								class="btn hover:bg-violet-600 focus:bg-violet-700">Trendings</button>
+								class="btn hover:bg-violet-600 focus:bg-violet-700">Trending</button>
 						</div>
 					</li>
 				</ul>
@@ -119,7 +119,7 @@
 							<div class="card-body">
 								<h2 class="card-title">{{desc.name}}</h2>
 								<div class="card-actions justify-end">
-									<button @click="detail(desc,'series')" class="btn btn-primary">Detalles</button>
+									<button @click="detail(desc,'series')" class="btn btn-primary">View</button>
 								</div>
 							</div>
 						</div>
@@ -134,7 +134,7 @@
 							<div class="card-body">
 								<h2 class="card-title">{{desc.name}}</h2>
 								<div class="card-actions justify-end">
-									<button @click="detail(desc,'series')" class="btn btn-primary">Detalles</button>
+									<button @click="detail(desc,'series')" class="btn btn-primary">View</button>
 								</div>
 							</div>
 						</div>
@@ -213,7 +213,7 @@
 					var data = new FormData();
 					var config = {
 						method: 'get',
-						url: 'https://api.themoviedb.org/3/movie/popular?&language=es-MX&page=1',
+						url: 'https://api.themoviedb.org/3/movie/popular?&language=en-US&page=1',
 						headers: {
 							'Authorization': 'Bearer eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJkZWRjOWQ0OTY0ZmVhMDA4YmVkNGVkMjc0ZDZkN2JjOSIsInN1YiI6IjYzMjAxYTY3Y2MyNzdjMDA4YTYxMTU3ZCIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.7SvRwk9oBs-BTvnhJe74ufeZZ43f3QhGqHGvVDWlxXc'
 						},
@@ -233,7 +233,7 @@
 					let vue = this
 					var config = {
 						method: 'get',
-						url: 'https://api.themoviedb.org/3/tv/popular?&language=es-MX&page=1',
+						url: 'https://api.themoviedb.org/3/tv/popular?&language=en-US&page=1',
 						headers: {
 							'Authorization': 'Bearer eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJkZWRjOWQ0OTY0ZmVhMDA4YmVkNGVkMjc0ZDZkN2JjOSIsInN1YiI6IjYzMjAxYTY3Y2MyNzdjMDA4YTYxMTU3ZCIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.7SvRwk9oBs-BTvnhJe74ufeZZ43f3QhGqHGvVDWlxXc'
 						}
@@ -334,7 +334,7 @@
 
 					var config = {
 						method: 'get',
-						url: 'https://api.themoviedb.org/3/genre/movie/list?&language=es-MX',
+						url: 'https://api.themoviedb.org/3/genre/movie/list?&language=en-US',
 						headers: {
 							'Authorization': 'Bearer eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJkZWRjOWQ0OTY0ZmVhMDA4YmVkNGVkMjc0ZDZkN2JjOSIsInN1YiI6IjYzMjAxYTY3Y2MyNzdjMDA4YTYxMTU3ZCIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.7SvRwk9oBs-BTvnhJe74ufeZZ43f3QhGqHGvVDWlxXc'
 						}
@@ -356,7 +356,7 @@
 
 					var config = {
 						method: 'get',
-						url: 'https://api.themoviedb.org/3/genre/tv/list?&language=es-MX',
+						url: 'https://api.themoviedb.org/3/genre/tv/list?&language=en-US',
 						headers: {
 							'Authorization': 'Bearer eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJkZWRjOWQ0OTY0ZmVhMDA4YmVkNGVkMjc0ZDZkN2JjOSIsInN1YiI6IjYzMjAxYTY3Y2MyNzdjMDA4YTYxMTU3ZCIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.7SvRwk9oBs-BTvnhJe74ufeZZ43f3QhGqHGvVDWlxXc'
 						}
@@ -377,11 +377,11 @@
 				detail(obj, type) {
 					console.log(type)
 					if (type == 'movie') {
-						window.location.href = 'movie.html';
+						window.location.href = '/movie.html';
 						localStorage.setItem('movie', JSON.stringify(obj));
 						localStorage.setItem('type', type)
 					} else if (type == 'series') {
-						window.location.href = 'movie.html';
+						window.location.href = '/movie.html';
 						localStorage.setItem('series', JSON.stringify(obj));
 						localStorage.setItem('type', type)
 					}
@@ -390,12 +390,12 @@
 				selectGenre(g) {
 					if (this.moviesFlag) {
 						var type = 'movie'
-						window.location.href = "genre.html"
+						window.location.href = "/genre.html"
 						localStorage.setItem('genre', JSON.stringify(g))
 						localStorage.setItem('type', type)
 					} else {
 						var type = 'series'
-						window.location.href = "genre.html"
+						window.location.href = "/genre.html"
 						localStorage.setItem('genre', JSON.stringify(g))
 						localStorage.setItem('type', type)
 					}
@@ -444,7 +444,7 @@
 					this.srsPopular = false
 				},
 				home(){
-					window.location.href="homePage.html"
+					window.location.href="/homePage.html"
 				}
 			},
 			mounted() {
