--- a/html/seasons.html
+++ b/html/seasons.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/dist/output.css">
-    <title>Lista de Temporadas</title>
+    <link rel="stylesheet" href="/output.css">
+    <title>Seasons</title>
 </head>
 
 <body>
@@ -41,7 +41,7 @@
                 <h2 class="card-title">{{ season.name }}</h2>
                 <p>{{ season.overview }}</p>
                 <p>{{ season.air_date }}</p>
-                <button @click="episodes(season, currShow)" class="btn btn-primary">Detalles</button>
+                <button @click="episodes(season, currShow)" class="btn btn-primary">View</button>
             </div>
         </div>
     </div>
@@ -94,12 +94,12 @@
                     this.user_avatar = this.user.avatar.tmdb.avatar_path
 
                 }, home() {
-                    window.location.href = "homePage.html"
+                    window.location.href = "/homePage.html"
                 },
                 episodes(season, tv) {
                     localStorage.setItem('tv', JSON.stringify(tv));
                     localStorage.setItem('season', JSON.stringify(season));
-                    window.location.href = "capitulos.html"
+                    window.location.href = "/capitulos.html"
                 }
             },
 
