--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 <button class="bg-blue-500 w-full text-gray-100 py-2 rounded hover:bg-blue-600 transition-colors"
                     @click="login">
-                    Acceder
+                    Login
                 </button>
             </div>
         </form>
@@ -80,7 +80,7 @@
                     axios(config)
                         .then(function (response) {
                             if (response.data.success) {
-                                window.location.href = './html/homePage.html';
+                                window.location.href = '/html/index.html';
                                 console.log("si te metiste")
                                 localStorage.setItem('user', JSON.stringify(User));
                             }
